DROP TABLE IF EXISTS cards CASCADE;

CREATE TABLE cards (
  id SERIAL PRIMARY KEY,
  rule_id INTEGER REFERENCES rules(id) ON DELETE CASCADE,
  lore_id INTEGER REFERENCES lore(id) ON DELETE CASCADE,
  
  title varchar(100) NOT NULL,
  content text NOT NULL
);